[tool.poetry]
name = "rarity"
version = "0.1.0"
description = ""
authors = ["Arash Fatahzade <fatahzade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.23.1"
httpx = "^0.19.0"
typer = "^0.4.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pudb = "^2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
