[tool.poetry]
name = "rarity"
version = "0.1.0"
description = ""
authors = ["Arash Fatahzade <fatahzade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.23.1"
httpx = "^0.19.0"
typer = {extras = ["all"], version = "^0.4.0"}
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pudb = "^2021.1"
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rarity = "rarity.main:app"

[tool.black]
line-length = 88
skip-string-normalization = true